# Simple_OpenCL_C_Lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: .gitignore  CMakeLists.txt  add.c  get_info.c  test.c
example/cl-src/: add.cl  main.cl
include/: SCL.h  init.h  scl_buffer.h  scl_compile.h  scl_device.h  scl_init.h  scl_kernel.h  scl_load_source.h  scl_platform.h  scl_queue.h  scl_struct.h  scl_tools.h  scl_types.h  scl_vector.h
src/: init.c  scl_buffer.c  scl_compile.c  scl_device.c  scl_init.c  scl_kernel.c  scl_load_source.c  scl_platform.c  scl_queue.c  scl_tools.c  scl_vector.c
